change media social

--- a/index.html
+++ b/index.html
@@ -795,6 +795,8 @@
 				    			        <i class="fa fa-facebook"></i>
 									</div>
 									<div><em>Arizka Astra Daihatsu</em><br/>
+										<a target="_blank" href="https://www.facebook.com/ArizkaAstraDaihatsu?mibextid=LQQJ4d" target="_blank">
+											<strong>Promo Daihatsu Super Murah</strong>
 								    										</div>
 								</div>
 								
@@ -813,9 +815,9 @@
 				 			            <i class="fa fa-instagram"></i>
 									</div>
 									<div>
-									    <em>DaihatsuBekasi</em><br/>
-								    											    <a target="_blank" href="Arizka Astra Daihatsu" target="_blank">
-										    	<strong>Arizka Astra Daihatsu</strong>
+									    <em>Daihatsu Super Murah</em><br/>
+								    											    <a target="_blank" href="https://instagram.com/promodaihatsu_supermurah?igshid=NTc4MTIwNjQ2YQ==" target="_blank">
+										    	<strong>Promo Daihatsu Super Murah</strong>
 											</a>
 																			</div>
 			    				</div>
@@ -1142,7 +1144,7 @@
 						    Stay Connected
 						</div>
 						        					        									
-															    	<a target="_blank" href="Arizka Astra Daihatsu" target="_blank">
+															    	<a target="_blank" href="https://instagram.com/promodaihatsu_supermurah?igshid=NTc4MTIwNjQ2YQ==" target="_blank">
 					            	    <i class="fa fa-instagram"></i>
 					            	</a>
 																						    		<a target="_blank" href="mailto:arizka.marselinarahmadani@dso.astra.co.id" target="_blank">
